JAKE added journal and updated Gitlab CI/CD variables

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,8 +33,8 @@ lint-test-job:
 #     # CI/CD variables, that value will override the value here.
 #     # You need to substitute in your real values for
 #     # GROUP_NAME, PROJECT_NAME, & WEBSERVICE_NAME below.
-#     PUBLIC_URL: https://GROUP_NAME.gitlab.io/PROJECT_NAME/
-#     REACT_APP_SAMPLE_SERVICE_API_HOST: https://WEBSERVICE_NAME.onrender.com
+#     PUBLIC_URL: https://vibe-check.gitlab.io/module3-project-gamma/
+#     REACT_APP_SAMPLE_SERVICE_API_HOST: https://vibe-check-ytit.onrender.com
 #   script:
 #     - cd ghi
 #     - npm install
