--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,25 @@
-# volumes:
+volumes:
+  mongo-data:
+    external: true
+
 services:
-  fastapi:
+  mongo:
+    image: mongo:6
+    volumes:
+      - mongo-data:/data/db
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+  vibe_check:
     build:
-      context: sample_service
+      context: vibe_check
       dockerfile: Dockerfile.dev
     ports:
       - 8000:8000
     volumes:
-      - ./sample_service:/app
-      
+      - ./vibe_check:/app
+    environment:
+      MONGO_URL: mongodb://admin:password@mongo
   ghi:
     image: node:lts-bullseye
     command: /bin/bash run.sh
@@ -23,4 +34,3 @@ services:
       HOST: "0.0.0.0"
       PUBLIC_URL: http://localhost:3000
       REACT_APP_SAMPLE_SERVICE_API_HOST: http://localhost:8000
-            
