--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,40 +1,40 @@
 volumes:
-  mongo-data:
-    external: true
+    mongo-data:
+        external: true
 
 services:
-  mongo:
-    image: mongo:6
-    volumes:
-      - mongo-data:/data/db
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
-  vibe_check:
-    build:
-      context: vibe_check
-      dockerfile: Dockerfile.dev
-    ports:
-      - 8000:8000
-    volumes:
-      - ./vibe_check:/app
-    environment:
-      SIGNING_KEY: 3gdzwsN8Tc51PF1PbiSu5eDqqvRxX8fEViatyRElMuxRk2RdxZ
-      WAIT_HOSTS: mongo:27017
-      WAIT_BEFORE: 5
-      WAIT_TIMEOUT: 60
-      MONGO_URL: mongodb://admin:password@mongo
-  ghi:
-    image: node:lts-bullseye
-    command: /bin/bash run.sh
-    working_dir: /app
-    volumes:
-      - ./ghi:/app
-    ports:
-      - "3000:3000"
-    environment:
-      HOST_OS: ${OS}
-      NODE_ENV: development
-      HOST: "0.0.0.0"
-      PUBLIC_URL: http://localhost:3000
-      REACT_APP_SAMPLE_SERVICE_API_HOST: http://localhost:8000
+    mongo:
+        image: mongo:6
+        volumes:
+            - mongo-data:/data/db
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: admin
+            MONGO_INITDB_ROOT_PASSWORD: password
+    vibe_check:
+        build:
+            context: vibe_check
+            dockerfile: Dockerfile.dev
+        ports:
+            - 8000:8000
+        volumes:
+            - ./vibe_check:/app
+        environment:
+            SIGNING_KEY: $(SIGNING_KEY)
+            WAIT_HOSTS: mongo:27017
+            WAIT_BEFORE: 5
+            WAIT_TIMEOUT: 60
+            MONGO_URL: mongodb://admin:password@mongo
+    ghi:
+        image: node:lts-bullseye
+        command: /bin/bash run.sh
+        working_dir: /app
+        volumes:
+            - ./ghi:/app
+        ports:
+            - "3000:3000"
+        environment:
+            HOST_OS: ${OS}
+            NODE_ENV: development
+            HOST: "0.0.0.0"
+            PUBLIC_URL: http://localhost:3000
+            REACT_APP_SAMPLE_SERVICE_API_HOST: http://localhost:8000
