TEAM: Finished authentication

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
         volumes:
             - ./vibe_check:/app
         environment:
-            SIGNING_KEY: $(SIGNING_KEY)
+            SIGNING_KEY: ${SIGNING_KEY}
             WAIT_HOSTS: mongo:27017
             WAIT_BEFORE: 5
             WAIT_TIMEOUT: 60
