--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,60 +1,62 @@
 stages:
-  - test
-  - build
-  - deploy
+    - test
+    - build
+    - deploy
 
 # Run flake8 to check for code quality
 lint-test-job:
-  image: python:3-bullseye
-  stage: test
-  script:
-    - pip install flake8
-    - flake8 sample_service
-#
+    image: python:3-bullseye
+    stage: test
+    script:
+        - pip install flake8
+        - pip install black
+        - flake8 vibe_check
+        - black vibe_check
+
 # Run the unit tests
-# api-unit-test-job:
-#   image: python:3-bullseye
-#   stage: test
-#   needs:
-#     - lint-test-job
-#   script:
-#     - cd sample_service
-#     - pip install -r requirements.txt
-#     - python -m pytest
+api-unit-test-job:
+    image: python:3-bullseye
+    stage: test
+    needs:
+        - lint-test-job
+    script:
+        - cd vibe_check
+        - pip install -r requirements.txt
+        - python -m pytest
 
 # Build the React/JavaScript front-end
 build-front-end-job:
-  stage: build
-  image: node:lts-bullseye
-  needs:
-    - lint-test-job
-  variables:
-    # If either of these variables is defined in the GitLab
-    # CI/CD variables, that value will override the value here.
-    # You need to substitute in your real values for
-    # GROUP_NAME, PROJECT_NAME, & WEBSERVICE_NAME below.
-    PUBLIC_URL: https://vibe-check.gitlab.io/module3-project-gamma/
-    REACT_APP_VIBE_CHECK_API_HOST: https://vibe-check-ytit.onrender.com
-  script:
-    - cd ghi
-    - npm install
-    - npm run build
-    - cp build/index.html build/404.html
-  artifacts:
-    paths:
-      - ghi/build/
+    stage: build
+    image: node:lts-bullseye
+    needs:
+        - lint-test-job
+    variables:
+        # If either of these variables is defined in the GitLab
+        # CI/CD variables, that value will override the value here.
+        # You need to substitute in your real values for
+        # GROUP_NAME, PROJECT_NAME, & WEBSERVICE_NAME below.
+        PUBLIC_URL: https://vibe-check.gitlab.io/module3-project-gamma/
+        REACT_APP_VIBE_CHECK_API_HOST: https://vibe-check-ytit.onrender.com
+    script:
+        - cd ghi
+        - npm install
+        - npm run build
+        - cp build/index.html build/404.html
+    artifacts:
+        paths:
+            - ghi/build/
 
 # Deploy the React/JavaScript front-end to GitLab pages
 pages:
-  stage: deploy
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  dependencies:
-    - build-front-end-job
-  needs:
-    - build-front-end-job
-  script:
-    - mv ghi/build/ public
-  artifacts:
-    paths:
-      - public
+    stage: deploy
+    rules:
+        - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    dependencies:
+        - build-front-end-job
+    needs:
+        - build-front-end-job
+    script:
+        - mv ghi/build/ public
+    artifacts:
+        paths:
+            - public
