--- a/ghi/package.json
+++ b/ghi/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.1",
+    "vanta": "^0.5.24",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
