--- a/vibe_check/Dockerfile
+++ b/vibe_check/Dockerfile
@@ -17,4 +17,4 @@ COPY routers routers
 RUN python -m pip install -r requirements.txt
 
 # !! PORT env var needs to match with exposed port in caprover dashboard
-CMD uvicorn main:app --host 0.0.0.0 --port 80
+CMD uvicorn main:app --reload --host 0.0.0.0 --port 80
